# Test

./: README.md  sph.geany
sph/: CMakeLists.txt  sph.kdev4
sph/.kdev4/: sph.kdev4
sph/src/: frame.cpp  frame.hpp  main.cpp  particle.cpp  particle.hpp
